# joint_group_ff_controller

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  custom_effort_controllers_plugins.xml  joint_group_ff_controllers_plugins.xml  package.xml
config/: controller.yaml  set_controller.sh
example/: tiago_dual_example_config.yaml  tiago_dual_load_example.sh
examples/: tiago_dual_example_config.yaml  tiago_dual_load_example.sh  ur5_example_config.yaml  ur5_load_example.sh
include/custom_effort_controllers/: joint_group_position_controller.h
include/joint_group_ff_controllers/: joint_group_effort_ff_controller.h  joint_group_velocity_ff_controller.h  rt_stopwatch.h
msg/: effort_command.msg  setpoint.msg
src/: joint_group_effort_ff_controller.cpp  joint_group_position_controller.cpp  joint_group_velocity_ff_controller.cpp
