<package format="2">
  <name>joint_group_ff_controllers</name>
  <version>0.17.2</version>
  <description>joint_group_ff_controllers</description>
  <maintainer email="etienne.arlaud@inria.fr">EtienneAr</maintainer>

  <author>EtienneAr</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>realtime_tools</depend>
  <depend>urdf</depend>
  <depend>forward_command_controller</depend>
  <depend>pluginlib</depend>

  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/joint_group_ff_controllers_plugins.xml"/>
  </export>
</package>
